// authService/src/grpc/proto/auth.proto
syntax = "proto3";

package authPackage;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (AuthResponse);
  rpc CheckAuthStatus (AuthStatusRequest) returns (AuthStatusResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LogoutRequest {
  string token = 1;
}

message AuthStatusRequest {
  string token = 1;
}

message AuthResponse {
  string message = 1;
  string token = 2;
  bool success = 3;
}

message AuthStatusResponse {
  bool isAuthenticated = 1;
  string message = 2;
}
